@@ -538,6 +538,7 @@ All (GUI):
 - Add possibility to hide and show again wxRibbonBar pages (wxBen).
 - Add expand/collapse button to wxRibbonBar (rakeshthp).
 - Fix item data access in wxDataViewListCtrl (Kry).
+- Fix problem with floating maximized AUI panes (Laurent Poujoulat).
 
 wxGTK:
 
